--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.20.1",
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "dom": "^0.0.3",
+    "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
